<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white"
    android:paddingBottom="18dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 分隔线 -->
    <!-- 收益率显示区 -->
    <RelativeLayout 
        android:id="@+id/adjust_rl"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/home_fomal_bg"
        >

        <RelativeLayout
            android:id="@+id/product_ly_anim"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp" 
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            >

            <TextView
                android:id="@+id/product_txt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:textSize="77sp"
                />
		    
		    
		
        </RelativeLayout>
        
        <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dp"
		    android:layout_marginTop="12dp"
		    android:gravity="left|bottom"
		    android:orientation="horizontal">
		    
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/day"/>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:layout_marginLeft="8dp"
		        android:textSize="18sp"
		        android:text="@string/average_balance"/>
		    
		</LinearLayout>
        
    <!-- 产品说明介绍区-->    
    </RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="70dp"
	   android:layout_alignParentTop="true"
	    android:orientation="vertical">
	    <TextView
		    android:id="@+id/textV1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_marginLeft="80dp"
		    android:textColor="@color/main_text_color"
		    android:textSize="13sp"
		    android:text="@string/title_short1" />
	   	<TextView
		    android:id="@+id/short_title1"
		    android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="30dp"
		    android:textSize="13sp"
		    android:textColor="@color/main_text_color"
		    android:text="@string/title_long1" />
	    
	</RelativeLayout>
		<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="70dp"
	   android:layout_alignParentTop="true"
	   android:background="@color/gray"
	    android:orientation="vertical">
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_marginLeft="80dp"
		    android:textColor="@color/main_text_color"
		    android:text="@string/title_short2" 
		    android:textSize="13sp"/>
	    
	   	<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="30dp"
		    android:textColor="@color/main_text_color"
		    android:text="@string/title_long2" 
		    android:textSize="13sp"/>
	    
	</RelativeLayout>
		<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="70dp"
	   android:layout_alignParentTop="true"
	    android:orientation="vertical">
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_marginLeft="80dp"
		    android:textColor="@color/main_text_color"
		    android:text="@string/title_short3" 
		    android:textSize="13sp"/>
	   	<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical ="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="30dp"
		    android:textColor="@color/main_text_color"
		    android:text="@string/title_long3" 
		    android:textSize="13sp"/>
	    
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="35dp"
		android:layout_height="180dp"
		android:layout_marginTop="-200dp"
		android:layout_marginLeft="30dp"
		android:background="@drawable/icon_08"
		></RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/main_out_back_color" 
            android:textSize="13sp"/>
    </LinearLayout>
    <!-- 转入图标 -->

    <TextView
        android:id="@+id/product_turn_in"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home_button_turnin"
        android:gravity="center"
        android:text="@string/turn_in"
        android:textColor="@color/main_text_blue_color"
        android:textSize="18sp" />

</RelativeLayout>