<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_style_bg"
    android:orientation="vertical" >

    
    
	<!-- title布局 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

	<!-- title下方块布局 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_below_back" />

	<!-- 线条 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line" />

    <!-- 关于鲸鱼金融 -->

    <RelativeLayout
        android:id="@+id/the_more_rl1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
		android:background="@drawable/back_select"  >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/about_us"
            android:textColor="@color/main_out_down_text_color" />

        <ImageView
            style="@style/image_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/all_left_offset"
            android:src="@drawable/button_arrow" />

    </RelativeLayout>

    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line" />


    <!-- 检查更新-->

    <RelativeLayout
        android:id="@+id/the_more_rl2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
		android:background="@drawable/back_select"  >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/check_update"
            android:textColor="@color/main_out_down_text_color" />

        <ImageView
            style="@style/image_arrow"
            android:id="@+id/the_more_img2"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/all_left_offset"
            android:src="@drawable/button_arrow" />

        <TextView
            android:id="@+id/more_version"
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/the_more_img2"
            android:text="@string/current_version"
            android:textColor="@color/main_out_down_text_color" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line" />

    <!-- 联系客服-->

    <RelativeLayout
        android:id="@+id/the_more_rl3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_menu_height"
		android:background="@drawable/back_select" >

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:text="@string/contact_us"
            android:textColor="@color/main_out_down_text_color" />

        <ImageView
            style="@style/image_arrow"
            android:id="@+id/the_more_img3"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/all_left_offset"
            android:src="@drawable/button_arrow" />

        <TextView
            style="@style/sec"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/the_more_img3"
            android:text="@string/contact_us_tel"
            android:textColor="@color/main_out_down_text_color" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line" />
    
 
    
    
    <Button 
        android:id="@+id/logout_submit"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_checkcode"
        android:text="@string/logout"
        android:textColor="@color/white"
        />

</LinearLayout>