<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent" 
 android:layout_height="fill_parent"
 android:layout_marginBottom="5dp"
 android:background="@color/white">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- title布局 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_below_back" />
    
<!-- 线条 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line" />
    
    
    <TextView
        android:id="@+id/get_cash_sec_tv0"
        style="@style/wrap"
        android:layout_marginLeft="@dimen/all_left_offset"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:lineSpacingMultiplier="1.5"
        android:textColor="@color/main_out_down_text_color"
        android:text=""/>
    
    <TextView
        android:id="@+id/get_cash_sec_tv11"
        style="@style/wrap"
        android:layout_marginLeft="@dimen/all_left_offset"
        android:layout_marginTop="2dp"
        android:textSize="13sp"
        android:gravity="bottom"
        android:textColor="@color/main_back_color"
        android:text="@string/tips_rule_one"/>
    <ScrollView 
        android:id="@+id/get_cash_sec_sv11"
        style="@style/wrap"
        android:layout_marginLeft="@dimen/all_left_offset"
        android:layout_marginRight="@dimen/all_left_offset"
        android:layout_marginTop="1dp"
        android:scrollbars="@null"
        android:visibility="gone"
        >
        
        <TextView
        style="@style/wrap"
        android:textSize="12sp"
        android:textColor="@color/main_out_down_text_color"
        android:text="@string/tips_rule_three"/>
    </ScrollView>
    
    
    <!-- 线条 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        layout="@layout/line" />
    
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/get_cash_sec_tv1"
            style="@style/sec"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:layout_marginTop="1dp"
            android:layout_centerVertical="true"
            android:text="@string/deal_passwd"
            android:textColor="@color/main_out_down_text_color" />
		<EditText
		    android:id="@+id/get_cash_sec_et1" 
		    android:layout_toRightOf="@id/get_cash_sec_tv1"
		    android:inputType="textPassword"
		    style="@style/edit_style"
		    android:hint="@string/hint_m"
		    />
        

    </RelativeLayout>

        <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        layout="@layout/line" />
    <!-- 验证码 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/get_cash_sec_tv2"
            style="@style/sec"
            android:layout_marginLeft="@dimen/all_left_offset"
            android:layout_centerVertical="true"
            android:hint="@string/modify_code"
            android:textColor="@color/main_out_down_text_color" />
        <Button
            android:id="@+id/get_cash_sec_send_code" 
            android:layout_toRightOf="@id/get_cash_sec_tv2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="14sp"
            style="@style/wrap"
            android:background="@drawable/mobile_code"
            android:textColor="@color/white"
            android:text="@string/send_modify_code"/>
		<EditText 
		    android:id="@+id/get_cash_sec_code"
		    android:layout_toRightOf="@id/get_cash_sec_send_code"
		    style="@style/edit_style"
		    android:hint="@string/hint_code"
		    android:inputType="number"
		    />
        

    </RelativeLayout>
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        layout="@layout/line" />
    
    
  <Button
      	android:id="@+id/get_cash_sec_submit" 
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_sure_height"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_checkcode"
        android:text="@string/the_submit"
        android:textColor="@color/white"
        />
    

</LinearLayout>
</ScrollView>