<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="35dp"
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <!-- title布局 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <ImageView 
        android:id="@+id/gift_detail_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"
        android:src="@drawable/gift_banner3"
        />
    
    <TextView 
        android:id="@+id/gift_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="125dp"
        android:textSize="8sp"
        android:text="@string/banner1"
        />
    
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:orientation="vertical" 
        >
        <TextView 
            android:layout_width="match_parent"
       		android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/main_out_down_text_color"
            android:textSize="16sp"
            android:text="@string/gift_rule_symbol"
            />
        <ScrollView 
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
	        android:layout_marginLeft="@dimen/all_left_offset"
	        android:layout_marginRight="@dimen/all_left_offset"
	        android:scrollbars="@null"
	        >
	        <TextView 
	            android:id="@+id/gift_detail_tv"
	            android:layout_width="match_parent"
	       		android:layout_height="wrap_content"
	            android:gravity="left"
	            android:layout_marginTop="10dp"
	            android:textColor="@color/bind_mob_line_color"
	            android:textSize="16sp"
	            android:text=""
	            />
        </ScrollView>
        <TextView 
            android:layout_width="match_parent"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="15dp"
            android:gravity="right"
            android:textColor="@color/bind_mob_line_color"
            android:textSize="16sp"
            android:text="@string/gift_rule_declare"
            />
        
        
    </LinearLayout>
    
    

</LinearLayout>
    <Button
        android:id="@+id/gift_detail_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_sure_height"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/button_checkcode"
        android:text="@string/gift_invite"
        android:textColor="@color/white"
        />
</RelativeLayout>

